css/spacious.less
/* ... */
.small-menu li {
    position: relative;
    font-family: 'Lato', sans-serif;
}

[dir=ltr] .small-menu li {
    float: left;
}

[dir=rtl] .small-menu li {
    float: right;
}

.small-menu li.default-menu {
    display: none;
}

li.default-menu {
    display: none;
}

.small-menu a {
    color: #666666;
    display: block;
    font-size: 1rem;
    height: 21px;
    font-size: 1.2rem;
}

[dir=ltr] .small-menu a {
    float: left;
    padding: 5px 0 0 16px;
}

[dir=rtl] .small-menu a {
    float: right;
    padding: 5px 16px 0 0;
}

.small-menu .buttons a img {
    opacity: .6;
}

[dir] .small-menu .buttons a img {
    margin-top: 2px;
}

.small-menu a:hover {
    color: @ini_theme_color;
}

.small-menu .buttons a:hover img {
    opacity: 1;
}

.small-menu ul li.current-menu-item a,
.small-menu ul li.current_page_ancestor a,
.small-menu ul li.current-menu-ancestor a,
.small-menu ul li.current_page_item a,
.small-menu ul li:hover > a {
    color: @ini_theme_color;
}

/* =Header Display Menu Bottom
----------------------------------------------- */
[dir] .spacious-header-display-four .bottom-menu .main-navigation {
    float: none;
}

[dir=ltr] .spacious-header-display-four .bottom-menu .main-navigation li:first-child {
    padding-left: 0;
}

[dir=rtl] .spacious-header-display-four .bottom-menu .main-navigation li:first-child {
    padding-right: 0;
}

/* =FOOTER WIDGET AREA
----------------------------------------------- */
#spacious__foot-widgets-container {;
    color: #fff - @ini_text;
    position: relative;
    z-index: 1;
}
[dir] #spacious__foot-widgets-container {
    background-color: #fff - @ini_background_site;
    border-top: 1px solid @ini_border;
}

#spacious__foot-widgets-wrap {
    /*padding-top: 30px;*/
    /*padding-bottom: 10px;*/
    /*margin: 0 3rem;*/
}

/*
#footer-widgets-wrap .tg-one-fourth .widget-title {
    text-align: left;
}

#footer-widgets-wrap h3.widget-title {
    color: #D5D5D5;
}

#footer-widgets-wrap .tg-one-fourth p {
    text-align: left;
    color: #999999;
}
*/

/*
#footer-widgets-wrap a {
    color: #D5D5D5;
}

#footer-widgets-wrap a:hover {
    color: @ini_theme_color;
}
*/

#spacious__foot {
    /*font-size: 1.4rem;*/
    line-height: 1.34;
    /*margin: 2rem 0 0 0;*/
}

#spacious__foot .widget {
    /*padding-bottom: 25px;*/
    /*padding-bottom: 15px;*/
    align-self: flex-start;
    flex: 4 0;
}

[dir] #spacious__foot .widget {
    padding: 0 1rem 1.5rem 1rem;
}

#spacious__userwidget {
    flex: 5 0 !important;
}

#spacious__licensewidget {
    flex: 3 0 !important;
}

#spacious__onlinewidget {
    /*flex: 0 3 !important;*/
    max-width: -webkit-max-content;
    max-width: -moz-max-content;
    max-width: max-content;
}

#spacious__foot .widget-title {
    /*font-size: 2.2rem;*/
    line-height: 2.12;
}

#spacious__foot p {
    /*font-size: 1.4rem;*/
    line-height: 1.34;
}

[dir] #spacious__user-avatar {
    margin: 0;
}

[dir=ltr] #spacious__user-avatar {
    float: right;
}

[dir=rtl] #spacious__user-avatar {
    float: left;
}

[dir] #spacious__foot p.user, [dir] #spacious__foot p.profile {
    text-align: center;
}

[dir] #spacious__foot p.user {
    margin: .6rem 0 0 0;
}

[dir] #spacious__foot p.profile {
    margin: .3rem 0 0 0;
}

/* =TOPBAR & FOOTER SOCKET AREA
----------------------------------------------- */
/*
#spacious__topbar,
.footer-socket-wrapper {
    padding: 1rem 0;
    margin: 0 3rem;
}
*/
[dir] #spacious__topbar, [dir] .footer-socket-wrapper {
    padding: 1rem 0;
}

#spacious__topbar-wrapper {
    position: relative;
    z-index: 1;
}

[dir] #spacious__topbar-wrapper {
    border-bottom: 1px solid @ini_border;
}

[dir=ltr] #spacious__topbar-date, [dir=ltr] #spacious__topbar-newsticker {
    margin: 0 1rem 0 0;
}

[dir=rtl] #spacious__topbar-date, [dir=rtl] #spacious__topbar-newsticker {
    margin: 0 0 0 1rem;
}

[dir=ltr] #spacious__topbar-social {
    margin: 0 0 0 1rem;
}

[dir=rtl] #spacious__topbar-social {
    margin: 0 1rem 0 0;
}

.footer-socket-wrapper {
    position: relative;
    z-index: 1;
}

[dir] .footer-socket-wrapper {
    border-top: 1px solid @ini_border;
}

/*
.breaking-news div {
	display: none;
}
*/

#spacious__topbar-newsticker strong {
	/*color: linen;*/
	/*margin-right: 0;*/
	position: relative;
	/*vertical-align: top;*/
}

[dir] #spacious__topbar-newsticker strong {
	margin-top: 0;
}

/* The HTML list gets replaced with a single div,
   which contains the active ticker item, so you
   can easily style that as well */
.breaking-news div {
	display: inline-block;
	word-wrap: break-word;
}

.js-lastchanges {
	display: inline-block;
	/*padding-left: 0;*/
	overflow: hidden;
	/*height: 2rem;*/
	height: 1.6rem;
    /*vertical-align: -3px;*/
    vertical-align: bottom;
}

#spacious__topbar-social ul,
#spacious__topbar-social ul li {
    display: inline-block;
}

[dir=ltr] #spacious__topbar-social ul li:not(:last-child) a span {
    margin-right: 1rem;
}

[dir=rtl] #spacious__topbar-social ul li:not(:last-child) a span {
    margin-left: 1rem;
}

/*
#spacious__topbar svg {
    width: calc(@ico-width * .5);
    vertical-align: -.9rem;
    fill: @ini_text_neu;
}
*/

.footer-socket-area {
    width: 100%;
}

.footer-socket-wrapper .copyright {
    color: #666666;
    max-width: 50%;
    /*float: left;*/
    /*font-size: 1.2rem;*/
}

.footer-socket-wrapper .copyright a {
    color: #666666;
}

.footer-socket-wrapper .copyright a:hover {
    color: @ini_link;
}

.footer-socket-wrapper .small-menu {
    /*float: right;*/
}

[dir] .footer-socket-wrapper .small-menu a {
    padding-top: 0;
}

[dir] .footer-socket-wrapper .copyright, [dir] .footer-socket-wrapper .small-menu ul {
    margin: 0;
}

.footer-socket-wrapper .small-menu ul li ul {
    top: 21px;
}
    
/* =DW SPECIFIC
 ----------------------------------------------- */

/* Section highlighting */

div.secedit.editbutton_section {
    display: block;
}

[dir] div.secedit.editbutton_section {
    margin-top: -1.6rem;
}
/* ... */

